<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="undo">Undo</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="error">Error</string>
    <string name="done">Done</string>
    <string name="expired_message">You\'re using an old version of the app, update now?</string>
    <string name="title_activity_rename_status">RenameStatusActivity</string>
    <string name="tapOnFileHint">If you can\'t see the full preview, tap on a file name to see it</string>
    <string name="renaming_notification_title">File rename</string>
    <string name="renaming_notification_text_completed">Operation completed</string>
    <string name="renaming_notification_text_completed_failed">Operation completed (<xliff:g id="number" example="5">%1$d</xliff:g> failed)</string>
    <string name="renaming_notification_text_indeterminate">Initialization<xliff:g id="ellipsis">\u2026</xliff:g></string>
    <string name="renaming_notification_text_template">File <xliff:g id="number" example="5">%1$d</xliff:g> of <xliff:g id="number" example="8">%2$d</xliff:g>.</string>
    <string name="renaming_notification_ticker_started">File rename started</string>
    <string name="renaming_notification_ticker_completed">File rename completed</string>
    <string name="renaming_notification_summary_big">Renamed: <xliff:g id="number" example="5">%1$d</xliff:g> - Failed: <xliff:g id="number" example="1">%2$d</xliff:g></string>
    <string name="title_activity_manage_favorites">Manage favorites</string>
    <string name="favorites_loading_error">Error loading favorites</string>
    <string name="action_favoritesManage_operations">Operations on favorites</string>
    <string name="action_favoritesManage_operations_rename">Rename favorite</string>
    <string name="action_favoritesManage_operations_new">New favorite</string>
    <string name="action_favoritesManage_operations_remove">Delete favorite</string>
    <string name="action_favoritesManage_operations_removeDone">Favorite \"<xliff:g id="favorite_name" example="yyyymmdd to yy-mm-dd">%s</xliff:g>\" deleted</string>
    <string name="action_favoritesManage_operations_importexport">Import-Export</string>
    <string name="action_favoritesManage_operations_import">Import from SD</string>
    <string name="action_favoritesManage_operations_importChoose">Import favorites from file</string>
    <string name="action_favoritesManage_operations_importDuplicate_message">A favorite named \"<xliff:g id="favorite_name" example="yyyymmdd to yy-mm-dd">%s</xliff:g>\" already exists</string>
    <string name="action_favoritesManage_operations_importDuplicate_replace">Replace</string>
    <string name="action_favoritesManage_operations_importDuplicate_skip">Skip</string>
    <string name="action_favoritesManage_operations_importDuplicate_rename">Rename</string>
    <string name="action_favoritesManage_operations_importDuplicate_rememberChoice">Remember choice</string>
    <string name="action_favoritesManage_operations_importDone">Import completed</string>
    <string name="action_favoritesManage_operations_export">Export to SD</string>
    <string name="action_favoritesManage_operations_exportAll">Export all to SD</string>
    <string name="action_favoritesManage_operations_exportDone">Exported to: \"<xliff:g id="filename" example="batch renamer/file.json">%s</xliff:g>\"</string>
    <string name="title_activity_about">About</string>
    <string name="about_header_info">Info</string>
    <string name="about_author_title">Author</string>
    <string name="about_version_title">Version</string>
    <string name="about_header_legal">Legal</string>
    <string name="about_eula_title">EULA</string>
    <string name="about_eula_summary">Show License Agreement</string>
    <string name="about_eula_dialog_title">END-USER LICENSE AGREEMENT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_remember_rules">Remember rules</string>
    <string name="pref_description_remember_rules_checked">On launch, load rules of the last time</string>
    <string name="pref_description_remember_rules_unchecked">On launch, start with an empty rule list</string>
    <string name="pref_title_debug_mode">Debug mode</string>
    <string name="pref_description_debug_mode">May slow down the app. Keep disabled unless you know what you\'re doing</string>
    <string name="action_newRule">New rule</string>
    <string name="action_newRule_error">Error occurred. Please contact developer</string>
    <string name="action_clearRules">Delete all rules</string>
    <string name="action_clearRules_message">Rules deleted</string>
    <string name="action_clearRules_emptymessage">No rule to delete</string>
    <string name="action_start">Rename</string>
    <string name="action_start_alert_title">Rename files?</string>
    <string name="action_start_alert_message">Operation can\'t be undone.</string>
    <string name="action_start_alert_positive">Rename</string>
    <string name="action_start_alert_negative">Cancel</string>
    <string name="action_start_toast">Renaming<xliff:g id="ellipsis">\u2026</xliff:g> Check notification for details</string>
    <string name="empty_filelist">Empty file list. Add some files first</string>
    <string name="empty_rulelist">Empty rule list. Add some rules first</string>
    <string name="action_favorites">Favorite rules</string>
    <string name="action_favoritesAdd">Add to favorites</string>
    <string name="action_favoritesAddLabel">Enter a label</string>
    <string name="action_favoritesAddLabelInvalid">Invalid label</string>
    <string name="action_favoritesAddReplaceLabel">There\'s already a favorite with the same label, do you want to replace it?</string>
    <string name="action_favoritesAdded">\"<xliff:g id="favorite_name" example="yyyymmdd to yy-mm-dd">%s</xliff:g>\" saved</string>
    <string name="action_favoritesAddError">Error saving favorite</string>
    <string name="action_favoritesLoad">Load favorite</string>
    <string name="action_favoritesEmpty">There are no favorites saved</string>
    <string name="action_favoritesManage">Manage favorites</string>
    <string name="file_section_title">Files</string>
    <string name="filelist_header_current">Current name</string>
    <string name="filelist_header_preview">Preview</string>
    <string name="filelist_header_preview_updating">Preview (updating)</string>
    <string name="rule_section_title">Rules</string>
    <string name="rule_generic_remove">Remove rule</string>
    <string name="rule_generic_remove_message">Rule removed</string>
    <string name="rule_generic_invalidrules">Some rules are not valid, you may want to check them</string>
    <string name="rule_generic_row_contentdescription">Rule preview, click to edit</string>
    <string name="rule_generic_emptyfield_contentdescription">Empty field</string>
    <string name="rule_generic_true_contentdescription">Yes</string>
    <string name="rule_generic_false_contentdescription">No</string>
    <string name="rule_generic_regex">Regex</string>
    <string name="rule_generic_regex_invalid_syntaxError">Syntax error</string>
    <string name="rule_generic_regex_invalid_outOfBounds">Index out of bounds</string>
    <string name="rule_generic_position">Position</string>
    <string name="rule_generic_positionAlt">From position</string>
    <string name="rule_generic_position_backward">Backward</string>
    <string name="rule_generic_apply">Apply to</string>
    <string-array name="rule_generic_apply_array">
        <item>Name</item>
        <item>Extension</item>
        <item>Name + Extension</item>
    </string-array>
    <string name="rule_add_title">Add</string>
    <string name="rule_changecase_title">Change case</string>
    <string name="rule_renumber_title">Renumber</string>
    <string name="rule_remove_title">Remove</string>
    <string name="rule_replace_title">Replace</string>
    <string name="rule_whitespaces_title">Whitespaces</string>
    <string name="rule_add_text">Text</string>
    <string name="rule_changecase_case">Change to</string>
    <string-array name="rule_changecase_case_array">
        <item>UPPER CASE</item>
        <item>lower case</item>
        <item>Camel Case</item>
        <item>Sentence case</item>
        <item>tOGGLE cASE</item>
    </string-array>
    <string name="rule_renumber_start">Start</string>
    <string name="rule_renumber_step">Step</string>
    <string name="rule_renumber_padding">Padding</string>
    <string-array name="rule_renumber_padding_array">
        <item>Automatic</item>
        <item>Manual</item>
        <item>Off</item>
    </string-array>
    <string name="rule_remove_characters">No. of characters</string>
    <string name="rule_replace_pattern">Pattern</string>
    <string name="rule_replace_replacement">Replace with</string>
    <string name="rule_whitespaces_char">Whitespace character</string>
    <string-array name="rule_whitespaces_char_array">
        <item>Space</item>
        <item>Underscore</item>
        <item>Minus sign</item>
        <item>Dot</item>
    </string-array>
    <string name="rule_whitespaces_duplicates">Remove duplicates</string>
    <string name="rule_whitespaces_replace">Replace character</string>
    <string-array name="rule_whitespaces_replace_array">
        <item>Do not replace</item>
        <item>Space</item>
        <item>Underscore</item>
        <item>Minus sign</item>
        <item>Dot</item>
    </string-array>
    <string name="rule_whitespaces_trim">Trim</string>
    <string-array name="rule_whitespaces_trim_array">
        <item>No</item>
        <item>Start</item>
        <item>End</item>
        <item>Both sides</item>
    </string-array>
</resources>