<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.giorgioaresu.batchrenamer.ManageFavoritesActivity" >
    <item
        android:id="@+id/action_favoritesManage_operations_rename"
        android:title="@string/action_favoritesManage_operations_rename"
        android:icon="?attr/ic_action_edit"
        android:showAsAction="ifRoom"
        android:orderInCategory="10" />

    <group
        android:showAsAction="ifRoom"
        android:orderInCategory="11">
        <item
            android:id="@+id/action_favoritesManage_operations_new"
            android:title="@string/action_favoritesManage_operations_new"
            android:icon="?attr/ic_action_important"
            android:orderInCategory="12" />
        <item
            android:id="@+id/action_favoritesManage_operations_remove"
            android:title="@string/action_favoritesManage_operations_remove"
            android:icon="?attr/ic_action_not_important"
            android:orderInCategory="13" />
    </group>

    <item
        android:title="@string/action_favoritesManage_operations_importexport"
        android:icon="?attr/ic_action_import_export"
        android:showAsAction="ifRoom"
        android:orderInCategory="14" >
        <menu>
            <item
                android:id="@+id/action_favoritesManage_operations_import"
                android:title="@string/action_favoritesManage_operations_import"
                android:orderInCategory="1" />
            <item
                android:id="@+id/action_favoritesManage_operations_export"
                android:title="@string/action_favoritesManage_operations_export"
                android:orderInCategory="2" />
            <item
                android:id="@+id/action_favoritesManage_operations_exportAll"
                android:title="@string/action_favoritesManage_operations_exportAll"
                android:orderInCategory="3" />
        </menu>
    </item>
</menu>
