<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:text="@string/rule_renumber_start"
                style="@style/Rule_ItemLabel" />

            <EditText
                android:id="@+id/rule_renumber_start"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <TextView
                android:text="@string/rule_renumber_step"
                style="@style/Rule_ItemLabel" />

            <EditText
                android:id="@+id/rule_renumber_step"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:selectAllOnFocus="true" />

        <TextView
            android:text="@string/rule_renumber_padding"
            style="@style/Rule_ItemLabel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:animateLayoutChanges="true" >

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/rule_renumber_padding_spinner"
                android:spinnerMode="dropdown"
                android:entries="@array/rule_renumber_padding_array" />

            <EditText
                android:id="@+id/rule_renumber_padding_amount"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="2"
                android:selectAllOnFocus="true" />

        </LinearLayout>

        <include layout="@layout/rule_section_position" />

        <include layout="@layout/rule_section_applyto" />

    </LinearLayout>

</ScrollView>